# ============================================================================ #
# Copyright (c) 2022 - 2024 NVIDIA Corporation & Affiliates.                   #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

[project]
name = "cuda-quantum"
dynamic = ["version"]
keywords = [ "cuda-quantum", "cuda", "quantum", "quantum computing", "nvidia", "high-performance computing" ]
description="Python bindings for the CUDA-Q toolkit for heterogeneous quantum-classical workflows."
authors = [{name = "NVIDIA Corporation & Affiliates"}]
maintainers = [{name = "NVIDIA Corporation & Affiliates"}]
readme = "python/README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
  'astpretty ~= 3.0',
  'cuquantum-cu11 ~= 24.03',
  'graphlib-backport >= 1.0',
  'numpy >= 1.24',
  'requests >= 2.31',
  'nvidia-cublas-cu11 == 11.11.3.6; platform_machine == "x86_64"',
  'nvidia-cuda-runtime-cu11 == 11.8.89; platform_machine == "x86_64"',
  'nvidia-cusolver-cu11 == 11.4.1.48; platform_machine == "x86_64"'
]

[project.urls]
Homepage = "https://developer.nvidia.com/cuda-quantum"
Documentation = "https://nvidia.github.io/cuda-quantum"
Repository = "https://github.com/NVIDIA/cuda-quantum"
Releases = "https://nvidia.github.io/cuda-quantum/latest/releases.html"

# We must use h5py<3.11 because 3.11 doesn't include aarch64 Linux wheels.
# https://github.com/h5py/h5py/issues/2408
[project.optional-dependencies]
chemistry = [ "scipy==1.10.1", "openfermionpyscf==0.5", "h5py<3.11"  ]
visualization = [ "qutip<5" , "matplotlib>=3.5" ]

[build-system]
requires = ["scikit-build-core==0.9.10", "cmake>=3.26,<3.29", "numpy>=1.24", "pytest==8.2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/cudaq"]
wheel.license-files = [ "LICENSE", "NOTICE", "CITATION.cff" ]
build-dir = "_skbuild"
sdist.include = ["_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.minimum-version = "3.26"
cmake.build-type = "Release"
cmake.verbose = false
cmake.args = [
    "-DCUDAQ_ENABLE_PYTHON=TRUE",
    "-DCUDAQ_DISABLE_CPP_FRONTEND=TRUE",
    "-DCUDAQ_DISABLE_TOOLS=TRUE",
    "-DCUDAQ_BUILD_TESTS=TRUE"
]

[tool.setuptools_scm]
write_to = "_version.py"
